<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main" />

    <item
        android:id="@+id/navigation_search_hospital"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/searchHospital" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@android:drawable/sym_action_chat"
        android:title="@string/chatRoom" />

    <item
        android:id="@+id/navigation_board"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/board" />
    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/ic_label_black_24dp"
        android:title="@string/eventList" />

</menu>
