<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <!-- 광고 제작 신청하기 -->
            <Button
                android:id="@+id/btnApplyForCreativeProduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorMain"
                android:lineSpacingExtra="5dp"
                android:text="@string/apply_for_creative_production"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apply_for_creative_production_description"
                android:textSize="11sp" />


            <!-- 1. 메인 팝업 광고 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/main_popup_ad"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_popup_ad_description"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnApplyForMainPopupAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorMain"
                android:lineSpacingExtra="5dp"
                android:text="@string/apply_for_main_popup_ad"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <!-- 2. 메인 배너 광고 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/main_banner_ad"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_banner_ad_description"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnApplyForMainBannerAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorMain"
                android:lineSpacingExtra="5dp"
                android:text="@string/apply_for_main_banner_ad"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <!-- 3. 오늘의 병원 광고 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/main_todays_hospital_ad"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_todays_hospital_ad_description"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnApplyForMainTodaysHospitalAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorMain"
                android:lineSpacingExtra="5dp"
                android:text="@string/apply_for_main_todays_hospital_ad"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- 4. 로그인 광고 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login_banner_ad"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_banner_ad_description"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnApplyForLoginBannerAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorMain"
                android:lineSpacingExtra="5dp"
                android:text="@string/apply_for_login_banner_ad"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- 4. 병원 찾기 배너 광고 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/search_hospital_banner_ad"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/search_hospital_banner_ad_context"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnApplyForSearchHospitalBannerAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorMain"
                android:lineSpacingExtra="5dp"
                android:text="[병원 찾기 울트라 광고] 신청하기"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>