<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/layoutToolbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <!-- 1. 메인 팝업 광고 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_popup_ad"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnUploadPhoto"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray"
            android:lineSpacingExtra="5dp"
            android:text="@string/click_to_upload_photos"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_popup_ad_description2"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/upload_ad_form"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/upload_ad_form_description"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/albumSelectorNormal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/cautions_when_uploading_ads"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/cautions_when_uploading_ads_description"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </LinearLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad_duration"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@id/txtviewAdDuration"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtviewAdDuration"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="30"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@id/txtviewAdDurationUnit"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtviewAdDurationUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_of_payment"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@id/txtviewAdDuration"
                app:layout_constraintTop_toTopOf="@id/txtviewAmountOfPaymentUnit" />

            <TextView
                android:id="@+id/txtviewAmountOfPayment"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="1,000,000"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@id/txtviewAmountOfPaymentUnit"
                app:layout_constraintTop_toTopOf="@id/txtviewAmountOfPaymentUnit" />

            <TextView
                android:id="@+id/txtviewAmountOfPaymentUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/won"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtviewAdDurationUnit" />

        </android.support.constraint.ConstraintLayout>


        <Button
            android:id="@+id/btnPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorMain"
            android:lineSpacingExtra="5dp"
            android:text="@string/make_a_payment"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


</ScrollView>