<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TabItem
                android:id="@+id/popular_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_order" />

            <android.support.design.widget.TabItem
                android:id="@+id/low_price_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_price_order" />

            <android.support.design.widget.TabItem
                android:id="@+id/high_price_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_price_order" />

            <android.support.design.widget.TabItem
                android:id="@+id/distance_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_order" />
        </android.support.design.widget.TabLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
            tools:listitem="@layout/event_row" />


    </android.support.constraint.ConstraintLayout>

</layout>