<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <!-- 광고 제작 신청하기 -->
            <Button
                android:id="@+id/btnApplyForCreativeProduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorMain"
                android:lineSpacingExtra="5dp"
                android:text="@string/apply_for_creative_production"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apply_for_creative_production_description"
                android:textSize="11sp" />


            <TextView
                android:id="@+id/txtviewAd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/main_popup_ad"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgviewPhoto"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/button_upload"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/change_photo"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="광고 유효기간 : 17일"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="광고 클릭수  : 1124회"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="광고 호응도 그래프"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layoutAdsResponseGraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>